# TSN_Abstracter

./: .gitignore  LICENSE.md  License.md  Ogata.json  README.md  Test.py  pyproject.toml
.adellian/: Adellian.mpkg  Git.mpkg  Stable.mpkg
.github/workflow/: pypi.yml
.github/workflows/: Ogata.yml  pypi.yml
JSON/: Test.json
TSN_Abstracter/: App.py  Calamity.py  Config.py  Cryptography.py  Debugger.py  Deco.py  File.py  Global.py  Log.py  Misc.py  SNDL.py  Safe.py  String.py  TSNDL.py  TUI.py  Time.py  __init__.py  debugger.py  file.py  safe.py
TSN_Abstracter/File/: __init__.py
TSN_Abstracter/TUI/: Draw.py  Entry.py  Globals.py  Input.py  Keybind.py  Menu.py  Popup.py  Prompt.py  __init__.py
